--- a/ms_6_supplemental.Rmd
+++ b/ms_6_supplemental.Rmd
@@ -65,7 +65,7 @@ Conus ammiralis (cones) - DP - AM limited to CT, IUCN shows in Madagascar; also 
 Conus tessulatus (cones) - extents
 Acropora sarmentosa (corals 1) - extents; also AM shows HI but IUCN does not?
 Holothuria fuscogilva (sea cucumbers) - extents; also AM shows Mex and Central Am west coast, but IUCN does not (not available online?)
-Oculina Varicosa (corals 2) - lim to Caribbean; extents - this might be a good close-up map
+Oculina varicosa (URM-Cn-5921) (corals part 1) - lim to Caribbean; extents - this might be a good close-up map
 Acanthocybium solandri (tunas/billfish) - mostly tropical by IUCN; AM shows much farther N and S
 
 Q3:
