--- a/ms_4_figs.Rmd
+++ b/ms_4_figs.Rmd
@@ -1,11 +1,64 @@
 
 # Figures
 
-Keep figures in the text while working, for easier editing and captioning.  
-Put figures here once the manuscript is done
+### Figure 1
+
+![](figures/bar_by_taxa_all.png)
+``` {r barchart_by_taxa, echo = FALSE}
+n_spp <- spp_map_pairs %>%
+  mutate(spp_group = ifelse(str_detect(spp_group, 'CORAL'), 'CORAL', spp_group)) %>%
+  group_by(spp_group) %>%
+  summarize(n_spp = n()) %>%
+  arrange(desc(n_spp))
+
+n_corals   <- nrow(spp_map_pairs %>% 
+                     filter(str_detect(spp_group, 'CORAL')))
+n_bonyfish <- nrow(spp_map_pairs %>% 
+                     filter(spp_group %in% c('WRASSES', 'COMBTOOTHBLENNIES', 'BUTTERFLYFISH', 
+                                             'PUFFERFISH', 'GROUPERS', 'SEABREAMS_PORGIES', 'PARROTFISH', 
+                                             'SURGEONFISH_TANGS_UNICORNFISH', 'ANGELFISH', 'TUNAS_BILLFISHES', 
+                                             'DAMSELFISH', 'BONEFISH_TARPONS')))
+```
+> __Figure 1(a):__ Number and proportion of species, listed by taxa, included in each dataset: IUCN, AquaMaps, or both.  AquaMaps encompasses a broader range of taxa than IUCN, while IUCN focuses on comprehensively assessing select taxonomic groups, typically at the level of order or family. Overlapping species are dominated by bony fishes (`r n_bonyfish` species, primarily tropical taxa) and corals (`r n_corals` species).
+
+![](figures/all_aquamaps_map.png)
+
+![](figures/all_iucn_map.png)
+
+> __Figure 1 (b, c):__ Global marine species richness according to (a) AquaMaps dataset and (b) IUCN dataset.  The frequency plot to the right of each map shows relative species count per cell at each latitude; while both datasets peak in tropical latitudes near the equator, the frequency for IUCN maps drops quickly beyond 30°N and 30°S, while the frequency for AquaMaps remains robust well into temperate latitudes.  The frequency plot above each map shows relative species count at each longitude, showing a slight bias in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps. 
+
+### Figure 2
+
+![](figures/AreaRatiovsPercOverlap.png)
+
+> __Figure 2 (a):__ For each paired-map species, we calculated two dimensions of spatial alignment: _distribution alignment_, which we defined as the proportion of the smaller range intersecting the larger range (where on the map); and _extent alignment_, which we defined as the ratio of the smaller range to the larger range (how much of the map).  For a species whose distribution is well understood and described in both datasets, we would expect to see a value near 100% for each dimension of alignment.  
+
+``` {r tally_quad_counts, echo = FALSE}
+dist_median <- round(median(spp_map_pairs$sm_perc,    na.rm = TRUE), 1)
+area_median <- round(median(spp_map_pairs$area_ratio, na.rm = TRUE), 1)
+q1_count <- sum(spp_map_pairs$sm_perc >= dist_median & spp_map_pairs$area_ratio >= area_median)
+q2_count <- sum(spp_map_pairs$sm_perc <  dist_median & spp_map_pairs$area_ratio >= area_median)
+q3_count <- sum(spp_map_pairs$sm_perc >= dist_median & spp_map_pairs$area_ratio <  area_median)
+q4_count <- sum(spp_map_pairs$sm_perc <  dist_median & spp_map_pairs$area_ratio <  area_median)
+```
+
+> The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than median value) in both spatial distribution and the extent of described ranges
+(n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %).
+> The upper left quadrant (quadrant 2) comprises species whose maps agree well in distribution, but disagree in extent
+(n = `r q2_count`; `r round(q2_count/nrow(spp_map_pairs) * 100, 1)` %).
+> The lower right quadrant (quadrant 3) includes species for which the paired maps generally agree in range extent, but disagree on where those ranges lie - a more worrisome mismatch than that indicated by quadrant 2
+(n = `r q3_count`; `r round(q3_count/nrow(spp_map_pairs) * 100, 1)` %).
+> The lower left quadrant (quadrant 4) indicates species for which the map pairs agree poorly in both area and distribution
+(n = `r q4_count`; `r round(q4_count/nrow(spp_map_pairs) * 100, 1)` %).
+
+![](figures/barchart_spp_gp_quads.png)
+
+> __Figure 2 (b):__ Spatial alignment of paired-map species by taxonomic group.
+
+<!--AquaMaps accounts for seafloor depth as a limiting factor, highly constraining the predicted habitat for photosynthesizing corals, while IUCN maps for coral species often include wide buffers that would extend far beyond appropriate depth for coral habitat, thus likely overestimating the actual species range (see SOM).  A similar mechanism may also drive poor extent alignment of other demersal and reef-associated organisms.-->
 
 
-### Figure 4
+### Figure 3
 
 ![Absolute change in SPP score](figures/SPP_scenarios/boxplot_abs_diff.png)
 
