--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -21,9 +21,12 @@ The two datasets ostensibly describe the same information, but significant diffe
 
 Importantly, biases in taxonomic or spatial coverage within a dataset could shift management or conservation actions away from places or species that are most in need.(maybe Jetz 2008?)  Inaccurate indications of presence or absence could lead to inefficient or ineffective marine reserve systems and management plans. (Rondinini et al. 2006) (Jetz 2008?)
 -->
-Together, the two datasets provide range information for XXX species, with only `r nrow(spp_map_pairs)` species common to both datasets.  ___what is the key takeaway for the taxonomic and spatial coverage analyses? can we say something about benefits of combining the two for better taxo coverage?___  For the subset of species included in both datasets, we examine the alignment of range maps by comparing range distribution and extent.  Categorizing the results based on quality of alignment, we identify several _problems?_ that commonly lead to disagreement in species range predictions.  Notably, IUCN maps often predict species presence at unsuitable depths, and AquaMaps maps often extrapolate species presence far afield from known occurrences.  ___something about recommendations here? how this understanding can lead to better use of these datasets?___
+Together, the two datasets provide range information for XXX species, with only `r nrow(spp_map_pairs)` species common to both datasets.  ___what is the key takeaway for the taxonomic and spatial coverage analyses? can we say something about benefits of combining the two for better taxo coverage?___  
 
-To understand the implications of these differences, we reexamined two recent global analyses that depend on these datasets: the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas.  ___how far to describe results here?___
+For the subset of species included in both datasets, we examine the alignment of range maps by comparing distribution and extent of predicted ranges.  Categorizing the results based on quality of alignment, we identify several issues that commonly lead to disagreement in species range predictions.  Notably, IUCN maps often neglect considerations of bathymetry, leading to predictions of species presence at unsuitable depths, and AquaMaps maps for data-poor species often extrapolate presence far afield from known occurrences.  ___something about recommendations here? how this understanding can lead to better use of these datasets?___
+
+To understand the implications of these differences, we reexamined two recent global analyses that depend on these datasets: the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas.  Variations in which dataset is used, and how, lead to significantly different estimates of species diversity and conservation effectiveness.
+
 <!--
 To understand the implications of differences between these two datasets, we compared how each data set represents the global spatial and taxonomic distribution of species.  For the relatively small number of species mapped in both datasets, we examined how well the species maps align. We then subjected two recent marine biodiversity studies - the Ocean Health Index biodiversity goal (Halpern et al. 2012) and a global MPA gap analysis (Klein et al. 2015) - to a sensitivity analysis, substituting one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity.
 -->
