--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -102,12 +102,12 @@ pct_overlap_quartiles <- quantile(spp_list$sm_perc, na.rm = TRUE)[2:4]
 #   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
 #   dplyr::select(-g, -s)
 
-spp_list <- spp_list %>% mutate(data_poor = occurcells < 10)
 ### mongo plot time
 scatter_arearatio_vs_overlap <- ggplot(spp_list %>% 
                                          transform(popn_category = reorder(popn_category, category_score)),
-                                       aes(x = area_ratio, y = sm_perc, 
-                                           color = data_poor,
+                                       aes(x = area_ratio, 
+                                           y = sm_perc, 
+                                           color = popn_category,
                                            size = lg_area_pct)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
@@ -140,13 +140,13 @@ scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
   annotate(geom = 'text',
            x = area_ratio_quartiles[2], y = 5,
            hjust = 0, vjust = 0,
-           color = 'grey50', size = 2,
+           color = 'grey40', size = 2,
            fontface = 'bold.italic', angle = 90,
            label = sprintf('Median = %s%%', round(area_ratio_quartiles[2], 1))) +
   annotate(geom = 'text',
            x = 5, y = pct_overlap_quartiles[2],
            hjust = 0, vjust = 0,
-           color = 'grey50', size = 2,
+           color = 'grey40', size = 2,
            fontface = 'bold.italic', angle = 0,
            label = sprintf('Median = %s%%', round(pct_overlap_quartiles[2], 1)))
   
@@ -184,6 +184,90 @@ scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
 print(scatter_arearatio_vs_overlap)
 
 ggsave(file.path(dir_fig, 'AreaRatiovsPercOverlap.png'), width = 6, height = 3.5)
+
+```
+
+``` {r pct_overlap_vs_ratio_of_area_w_data_poor, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
+
+
+spp_list <- spp_list %>% mutate(data_poor = ifelse(occurcells < 10, '< 10', '>= 10')
+### mongo plot time
+scatter_arearatio_vs_overlap <- ggplot(spp_list %>% 
+                                         transform(popn_category = reorder(popn_category, category_score)),
+                                       aes(x = area_ratio, y = sm_perc, 
+                                           color = data_poor,
+                                           size = lg_area_pct)) + 
+  ggtheme_plot + 
+  ### color the quadrant backgrounds:
+    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
+                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "green4")  + 
+    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
+                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "greenyellow") + 
+    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
+                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orange") + 
+    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
+                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orangered2") + 
+  geom_point(alpha = .6)
+
+### Manage scales for color and size 
+scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+  scale_colour_manual(values = c('>= 10' = 'green4', 
+                                 '< 10'  = 'orangered2')) + 
+  scale_size_continuous(limits = c(0, 100),
+                        breaks = c( 0,    25,    50,    75,    100), 
+                        labels = c('0%', '25%', '50%', '75%', '100%')) + 
+  scale_x_continuous(expand = c(0, 0), limits = c(0, 100)) +
+  scale_y_continuous(expand = c(0, 0), limits = c(0, 100))
+  
+### here are median labels:
+scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+  annotate(geom = 'text',
+           x = area_ratio_quartiles[2], y = 5,
+           hjust = 0, vjust = 0,
+           color = 'grey40', size = 2,
+           fontface = 'bold.italic', angle = 90,
+           label = sprintf('Median = %s%%', round(area_ratio_quartiles[2], 1))) +
+  annotate(geom = 'text',
+           x = 5, y = pct_overlap_quartiles[2],
+           hjust = 0, vjust = 0,
+           color = 'grey40', size = 2,
+           fontface = 'bold.italic', angle = 0,
+           label = sprintf('Median = %s%%', round(pct_overlap_quartiles[2], 1)))
+  
+### here are median lines:
+# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+#   geom_vline(x = area_ratio_quartiles[2],
+#              color = 'grey50', linetype = 'dashed') +
+#   geom_hline(y = pct_overlap_quartiles[2],
+#              color = 'grey50', linetype = 'dashed')
+
+### here are 25% and 75% quantile lines:
+# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+#   geom_vline(x = area_ratio_quartiles[c(1, 3)],
+#              color = 'grey50', linetype = 'dashed') +
+#   geom_hline(y = pct_overlap_quartiles[c(1, 3)],
+#              color = 'grey50', linetype = 'dashed')
+  
+### here are individual species, identified and named on the plot:
+# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+#   geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
+#   geom_text(data = spp_list_label, 
+#             aes(label = sciname_label), 
+#             color = 'grey30',
+#             fontface = 'bold.italic',
+#             size = 2,
+#             hjust = .25,
+#             vjust = 1.5)
+
+scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+  labs(x = bquote('Extent alignment '*alpha['ext']*' (%)'), 
+       y = bquote('Distribution alignment '*alpha['dist']*' (%)'), 
+       title = 'Distribution alignment vs Extent alignment',
+       color = 'AM model cells', size = '% ocean range') 
+
+print(scatter_arearatio_vs_overlap)
+
+ggsave(file.path(dir_fig, 'AreaRatiovsPercOverlap-data_poor.png'), width = 6, height = 3.5)
 
 ```
 
