--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -98,22 +98,22 @@ Quadrant 1 contains species whose map pairs agree in both spatial distribution a
 
 The extent-misaligned maps contained in quadrant 2 provide a richer set of examples to understand the fundamental differences between the datasets; examining these, we can identify several mechanisms that could cause such extent misalignment.  
 
-For `r n_q2_am_sm` of `r n_q2` species in quadrant 2 (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  By itself, this is not surprising; but for many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  We suspect that many of these extent-misaligned map pairs can be easily explained: most corals and reef-associated organisms prefer shallower waters; seafloor depth is explicitly modeled in AquaMaps, but not explicitly considered in IUCN range considerations. (For examples and details, see SOM) 
+For `r n_q2_am_sm` of `r n_q2` species in quadrant 2 (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  By itself, this is not surprising; but for many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  We suspect that many of these extent-misaligned map pairs can be easily explained: most corals and reef-associated organisms prefer shallower waters; seafloor depth is explicitly modeled in AquaMaps, while depth is frequently ignored as a factor in IUCN range maps. (For examples and details, see SOM) 
 
 * ___verify some of the coral maps by saving raster, showing raster and polygons in QGIS against a bathymetry layer___
 * ___include recommendation for IUCN range maps to be clipped to bathymetry where appropriate? or save til end?___ 
 
-The extent-alignment of species maps found in quadrant 3 can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges are frequently overextended into unsuitable habitat, as in the case of many quadrant 2 species, but at the same time, AquaMaps aggressively extrapolates distribution of presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, giving the impression of extent alignment. ___this quadrant seems to be a false alignment then?___
+The extent-alignment of species maps found in quadrant 3 can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges are frequently overextended into unsuitable habitat, as in the case of many quadrant 2 species, while at the same time, AquaMaps aggressively extrapolates distribution of presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, giving the impression of extent alignment. ___this quadrant seems to be a false alignment then?___
 
-Quadrant 4 species maps seem to suffer from the same problem as those in quadrant 3, but here the AquaMaps extrapolation extends even further, pushing the extent alignment ratio lower.  In this quadrant, AquaMaps predicts a larger extent than IUCN for 70% of species represented in this quadrant, compared with just 30% of species in the entire set of overlapping maps _(this is supposed to show that much of this quadrant is based on overextrapolation of AquaMaps)_. 
+Quadrant 4 species maps seem to suffer from the same problem as those in quadrant 3, but here the AquaMaps extrapolation extends even further, pushing the extent alignment ratio lower.  In this quadrant, AquaMaps predicts a larger extent than IUCN for 70% of species represented in this quadrant, compared with just 30% of species in the entire set of overlapping maps _(this is supposed to show that much of this quadrant is based on overextrapolation of AquaMaps)_. Quadrant 4 in particular includes a high proportion of data-poor species in which the environmental envelope model is based on fewer than 10 known cell occurrences, and at the same time includes a smaller number of reviewed species maps than the other quadrants.
 
 
-___table to show data poor status and reviewed status for AquaMaps maps represented in the quadrant plot___
+___table to show data poor status and reviewed status for AquaMaps maps represented in the quadrant plot - should the quadrant plot show data-poor species instead of, say, red-list category?___
 
 | quadrant | n species | n data poor species | n reviewed species |
 | :------: | :-------: | :-----------------: | :----------------: |
-|  total   |   22889   |        8749 (38.2%) |       1296  (5.7%) |
-|  paired  |    2166   |         457 (21.1%) |        290 (13.4%) |
+| overall  |   22889   |        8749 (38.2%) |       1296  (5.7%) |
+| AM&IUCN  |    2166   |         457 (21.1%) |        290 (13.4%) |
 |   q1     |     401   |          33  (8.2%) |        100 (24.9%) |
 |   q2     |     682   |         151 (22.1%) |        100 (14.7%) |
 |   q3     |     682   |         114 (16.5%) |         65  (9.5%) |
